# TFTP_client

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tftp.cpp  tftp.h
.github/workflows/: c-cpp.yml  cmake.yml
